test/integration/bad/embedded_laplace/missing_args8.stan
model {
  target += laplace_marginal_tol_poisson_log_lpmf({1}, {1}, [0]', 1);
}
